modify config file

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ timezone:           Asia/Shanghai # https://en.wikipedia.org/wiki/List_of_tz_dat
 highlighter:         rouge #pygments
 #markdown:           redcarpet
 #redcarpet:
-#    extensions:     ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data", "highlight", "footnotes"]
+extensions:         ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data", "highlight", "footnotes"]
 markdown:           kramdown
 kramdown:
     input:          GFM
