--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ timezone:           Asia/Shanghai # https://en.wikipedia.org/wiki/List_of_tz_dat
 
 # Site Build
 highlighter:         rouge #pygments
-#markdown:           redcarpet
-#redcarpet:
-extensions:         ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data", "highlight", "footnotes"]
+markdown:            redcarpet
+redcarpet:
+#extensions:         ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data", "highlight", "footnotes"]
 markdown:           kramdown
 kramdown:
     input:          GFM
