--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ include:            [ "robots.txt" ]
 exclude:            [ "LICENSE", "README.md", "CNAME", "vendor", "Gemfile" ]
 gems:
   - jekyll-sitemap
+  - jekyll-toc
 
 # staticman
 Fields: [ "name","email","comment" ]
